--- a/Introducao/00-Basics.ipynb
+++ b/Introducao/00-Basics.ipynb
@@ -40,14 +40,21 @@
     "\n",
     "* Produtos escalares e multiplicações de matrizes são denotados por $\\cdot$:\n",
     "  \n",
-    "  Ex.:  $\\mathbf{p} · \\mathbf{q}$"
+    "  Ex.:  $\\mathbf{p} · \\mathbf{q}$\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Produto escalar\n",
+    "## Produto escalar\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "O produto escalar entre dois vetores $\\mathbf{a}$ e $\\mathbf{b}$ é definido como:\n",
     "\n",
@@ -58,14 +65,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"../figs/produto_escalar.png\" alt=\"sample\" width=\"500\">"
+    "<img src=\"../figs/produto_escalar.png\" alt=\"sample\" width=\"400\">"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Multiplicação de Matrizes\n",
+    "## Multiplicação de Matrizes\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "$A \\cdot B = C$\n",
     "\n",
@@ -84,7 +97,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "<img src=\"../figs/trigonometria.png\" alt=\"sample\" width=\"600\">"
+    "<img src=\"../figs/trigonometria.png\" alt=\"sample\" width=\"500\">"
    ]
   },
   {
@@ -95,7 +108,7 @@
     "\n",
     "Números complexos são aqueles que possuem uma parte real $a$ e uma parte imaginária  $b$. \n",
     "\n",
-    "Sabendo-se que $j = \\sqrt(-1)$ é uma unidade imaginária, um número complexo $c$ pode ser escrito como:\n",
+    "Sabendo-se que $j = \\sqrt{-1}$ é uma unidade imaginária, um número complexo $c$ pode ser escrito como:\n",
     "\n",
     "$c = a + j \\ast b$\n",
     "\n",
@@ -107,7 +120,14 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Os números complexos são frequentemente visualizados como pontos em um plano $x/y$, sendo a parte real o componente $x$ e a parte imaginária o componente $y$. Usando esta representação, as oscilações podem ser descritas elegantemente com a fórmula de Euler:\n",
+    "\n",
+    "$e^{j \\omega t} = cos( \\omega t) + j sen( \\omega t)$\n",
+    "\n",
+    "\n",
+    "<img src=\"../figs/euler_formula.png\" alt=\"sample\" width=\"400\">"
+   ]
   },
   {
    "cell_type": "markdown",
