--- a/Introducao/00-Basics.ipynb
+++ b/Introducao/00-Basics.ipynb
@@ -121,12 +121,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Os números complexos são frequentemente visualizados como pontos em um plano $x/y$, sendo a parte real o componente $x$ e a parte imaginária o componente $y$. Usando esta representação, as oscilações podem ser descritas elegantemente com a fórmula de Euler:\n",
+    "Os números complexos são frequentemente visualizados como pontos em um plano $x/y$, sendo a parte real o componente $x$ e a parte imaginária o componente $y$. \n",
+    "\n",
+    "Usando esta representação, as oscilações podem ser descritas elegantemente com a fórmula de Euler:\n",
     "\n",
     "$e^{j \\omega t} = cos( \\omega t) + j sen( \\omega t)$\n",
     "\n",
+    "A fórmula de Euler, cujo nome é uma homenagem a Leonhard Euler, é uma fórmula matemática da área específica da análise complexa, que mostra uma relação entre as funções trigonométricas e a função exponencial.\n",
     "\n",
-    "<img src=\"../figs/euler_formula.png\" alt=\"sample\" width=\"400\">"
+    "<img src=\"../figs/euler_formula.png\" alt=\"sample\" width=\"400\">\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Apartir da fórmula de Euler, números complexos podem ser expressos na sua forma exponencial:\n",
+    "\n",
+    "<img src=\"../figs/complexo_exp.png\" alt=\"sample\" width=\"800\">"
    ]
   },
   {
