--- a/Introducao/03-Sistemas.ipynb
+++ b/Introducao/03-Sistemas.ipynb
@@ -53,6 +53,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "A teoria de sistemas envolve uma grande variedade de sistemas, tais como elétricos, mecânicos, hidráulicos, acústicos, eletromecânicos e químicos, além de sistemas sociais, políticos, econômicos, biológicos...\n",
+    "\n",
     "Um sistema pode ser uma **entidade física**, constituída por componentes físicos (implementação em hardware) ou pode ser uma **entidade abstrata**, constituída po um algoritmo que calcula o sinal de saída a partir de um sinal de entrada (implementação em software)."
    ]
   },
@@ -108,7 +110,58 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exemplo de sistema: Um circuito RC <a class=\"anchor\" id=\"section_1_2\"></a>"
+    "### Exemplo de sistema: Sistemas elétricos <a class=\"anchor\" id=\"section_1_2\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "O primeiro passo na análise de um sistema é a construção do modelo do sistema, o qual é a expressão matemática ou regra que aproxima satisfatoriamente o comportamento dinâmico do sistema. \n",
+    "\n",
+    "Aqui, vamos dar um exemplo de um sistema contínuo no tempo: Um circuito elétrico."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Para construir um modelo de sistema, devemos estudar as **relações entre as diferentes variáveis do sistema**. No caso dos sistemas elétricos, temos:\n",
+    "\n",
+    "* a relação tensão-corrente de cada elemento do circuito (tal como a lei de Ohm para o resistor).\n",
+    "* as várias relações nas tensões e correntes quando vários elementos estão conectados(leis de interconexão de Kirchoff para tensão e corrente - TKT e LKC)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###  Equação de entrada-saída para o circuito RLC:\n",
+    "\n",
+    "* tensão de entrada $x(t)$\n",
+    "* corrente de saída (corrente de malha) y(t)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src = \"../figs/rlc.png\" width = \"600\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lei de Kirchohoff das tensões para a malha:\n",
+    "\n",
+    "$$v_L(t) + v_R(t) + v_c(t) = x(t)$$\n",
+    "\n",
+    "Utilizando as leis tensão-corrente:\n",
+    "\n",
+    "$$L\\frac{dy}{dt} + Ry(t) + \\frac{1}{C} \\int_{-\\infty}^{t} i(\\tau) d\\tau = x(t)$$\n",
+    "\n",
+    "$$\\frac{dy}{dt} + 3y(t) + 2\\int_{-\\infty}^{t} i(\\tau) d\\tau = x(t)$$"
    ]
   },
   {
