--- a/00-Basics.ipynb
+++ b/00-Basics.ipynb
@@ -97,7 +97,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "<img src=\"../figs/trigonometria.png\" alt=\"sample\" width=\"500\">"
+    "<img src=\"figs/trigonometria.png\" alt=\"sample\" width=\"500\">"
    ]
   },
   {
@@ -129,7 +129,7 @@
     "\n",
     "A fórmula de Euler, cujo nome é uma homenagem a Leonhard Euler, é uma fórmula matemática da área específica da análise complexa, que mostra uma relação entre as funções trigonométricas e a função exponencial.\n",
     "\n",
-    "<img src=\"../figs/euler_formula.png\" alt=\"sample\" width=\"400\">\n",
+    "<img src=\"figs/euler_formula.png\" alt=\"sample\" width=\"400\">\n",
     "\n"
    ]
   },
@@ -139,7 +139,7 @@
    "source": [
     "Apartir da fórmula de Euler, números complexos podem ser expressos na sua forma exponencial:\n",
     "\n",
-    "<img src=\"../figs/complexo_exp.png\" alt=\"sample\" width=\"800\">"
+    "<img src=\"figs/complexo_exp.png\" alt=\"sample\" width=\"800\">"
    ]
   },
   {
@@ -161,7 +161,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "<img src=\"../figs/signal_processing_pck.png\" alt=\"sample\" width=\"600\">"
+    "<img src=\"figs/signal_processing_pck.png\" alt=\"sample\" width=\"600\">"
    ]
   },
   {
