--- a/00-Exemplos.ipynb
+++ b/00-Exemplos.ipynb
@@ -24,7 +24,7 @@
     "Abaixo segue a transformação da rotação de um ponto no espaço bidimensional: \n",
     "\n",
     "\n",
-    "<img src=\"../figs/matriz_rotacao.png\" alt=\"sample\" width=\"300\">\n",
+    "<img src=\"figs/matriz_rotacao.png\" alt=\"sample\" width=\"300\">\n",
     "\n",
     "Após implementação da função, plote o vetor definido por $P_0$ e $P_1$ e, no mesmo gráfico também plote um vetor (de diferente cor) referente ao vetor rotacionado."
    ]
