--- a/01-Sinais.ipynb
+++ b/01-Sinais.ipynb
@@ -96,7 +96,7 @@
         "de algum fenômeno**.\n",
         "2. **Sistemas respondem a sinais** em particular, **produzindo outros sinais ou algum comportamento** desejado.\n",
         "\n",
-        "<img src =\"../figs/sinais_sistemas.jpeg\"  width = \"600\">"
+        "<img src =\"figs/sinais_sistemas.jpeg\"  width = \"600\">"
       ]
     },
     {
@@ -321,7 +321,7 @@
       "source": [
         "Um sinal de tempo discreto $x[n]$ pode representar um fenômeno para o qual a variável independente é inerentemente discreta. Por outro lado, **uma classe muito importante de sinais de tempo discreto decorre da amostragem de sinais de tempo contínuo**. Nesse caso, o sinal de tempo discreto $x[n]$ representa amostras sucessivas de um fenômeno para o qual a variável independente é contínua.\n",
         "\n",
-        "<img src = \"../figs/continuous_vs_sampling.jpeg\" width = \"500\">\n",
+        "<img src = \"figs/continuous_vs_sampling.jpeg\" width = \"500\">\n",
         "\n",
         "Um exemplo de um sinal inerentemente discreto  correspondente ao mercado de ações Dow Jones Industrial Average\n",
         "índice (que é definido apenas em intervalos diários), enquanto um exemplo de um sinal amostrado seria a versão amostrada de um (tempo contínuo) sinal de fala."
@@ -574,7 +574,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "<img src = \"../figs/ondas.jpeg\" width = \"700\">"
+        "<img src = \"figs/ondas.jpeg\" width = \"700\">"
       ]
     },
     {
