--- a/02-ModelosSinais.ipynb
+++ b/02-ModelosSinais.ipynb
@@ -62,7 +62,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src = \"../figs/degrau_unitario.png\" width = \"600\">"
+    "<img src = \"figs/degrau_unitario.png\" width = \"600\">"
    ]
   },
   {
@@ -299,7 +299,7 @@
     "\n",
     "O impulso unitário $δ(t)$ é uma das mais importantes funções no estudo de sinais e sistemas.\n",
     "\n",
-    "<img src = \"../figs/step-and-pulse.png\" width = \"500\">\n",
+    "<img src = \"figs/step-and-pulse.png\" width = \"500\">\n",
     "\n",
     "\n",
     "$\\int_{-\\infty}^{\\infty} \\delta(t)dt = 1$\n",
@@ -644,7 +644,7 @@
     "\n",
     "Também iremos explorar outras  medidas associadas a este tipo de sinal, tais como **amplitide de pico**, **período** e **frequencia**.\n",
     "\n",
-    "<img src = \"../figs/cpc.jpeg\" width = \"300\">"
+    "<img src = \"figs/cpc.jpeg\" width = \"300\">"
    ]
   },
   {
@@ -1039,11 +1039,11 @@
     "\n",
     "Uma condição necessária para que a energia seja finita é que $x(t) \\rightarrow 0 \\;\\; \\text{quando} \\;\\; |t| \\rightarrow \\infty $\n",
     "\n",
-    "<img src = \"../figs/energia_finita.png\" width = \"500\">\n",
+    "<img src = \"figs/energia_finita.png\" width = \"500\">\n",
     "\n",
     "Caso contrário a integral não irá convergir, como é o caso do exemplo abaixo:\n",
     "\n",
-    "<img src = \"../figs/energia_infinita.png\" width = \"500\">\n",
+    "<img src = \"figs/energia_infinita.png\" width = \"500\">\n",
     "\n",
     "Uma medida mais significativa do tamanho do sinal neste caso é a **energia média** do sinal, se ela existir. Esta medida é chamada\n",
     "de **potência do sinal**. "
@@ -1107,7 +1107,7 @@
    "source": [
     "### Exercício:\n",
     "\n",
-    "<img src = \"../figs/ex_energia_potencia.png\" width = \"600\">"
+    "<img src = \"figs/ex_energia_potencia.png\" width = \"600\">"
    ]
   },
   {
