--- a/03-Sistemas.ipynb
+++ b/03-Sistemas.ipynb
@@ -8,19 +8,9 @@
     "\n",
     "# Conteúdo da aula\n",
     "1. [Sistemas](#chapter1)  \n",
-    "   1. [Exemplo de modelagem de um sistema: Sistemas elétricos](#section_1_2) \n",
-    "   2. [Análise de sistemas](#section_1_2)\n",
-    "      1. [Uma classificação primilinar de sistemas](#section_1_2_1)\n",
-    "      2. [Interconexão entre sistemas](#section_1_2_2)\n",
-    "2. [Classificação de Sistemas](#chapter2) \n",
-    "    1. [Sistemas lineares e não lineares](#section_2_1) \n",
-    "       1. [Conceito de linearidade](#section_2_1_1)\n",
-    "       2. [Resposta de sistemas lineares e não lineares](#section_2_1_2)\n",
-    "    2. [Sistemas invariantes e variantes no tempo](#section_2_2) \n",
-    "    3. [Sistemas instantâneos e dinâmicos](#section_2_3)\n",
-    "    4. [Sistemas causais e não causais](#section_2_4)  \n",
-    "    5. [Sistemas inversíveis e não inversíveis](#section_2_7)   \n",
-    "    6. [Sistemas estáveis e instaveis](#section_2_8) "
+    "2. [Exemplo de modelagem de um sistema: Sistemas elétricos](#section_1_2) \n",
+    "3. [Propriedades de sistemas](#chapter2) \n",
+    "    "
    ]
   },
   {
