--- a/04-SistemasLIT.ipynb
+++ b/04-SistemasLIT.ipynb
@@ -1,10 +1,26 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "# Sistemas lineares invariantes no tempo no domínio do tempo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nesta disciplina, consideraremos dois métodos de análise de sistemas lineares invariantes no tempo (LIT):\n",
+    "* o método no domínio do tempo\n",
+    "* o método no domínio da freqüência\n",
+    "\n",
+    "Vamos iniciar nossos estudos com a análise de sistemas lineares invariantes no tempo (LIT) no domínio do tempo."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
