--- a/04-SistemasLIT.ipynb
+++ b/04-SistemasLIT.ipynb
@@ -144,7 +144,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src =\"figs/convolucao.png\"  width = \"700\">"
+    "<img src =\"figs/convolucao.png\"  width = \"700\">\n"
    ]
   },
   {
